SDGF-162: Update versions before release